--- a/src/app/components/shared/navbar/navbar.component.html
+++ b/src/app/components/shared/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container">
-    <a href="/" class="navbar-brand">Movies App</a>
+    <a routerLink="/" class="navbar-brand">Movies App</a>
     <button class="navbar-toggler float-right" type="button" data-bs-toggle="collapse"
       data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false">
       <span class="navbar-toggler-icon"></span>
@@ -18,14 +18,17 @@
           <button mat-mini-fab color="primary" (click)="logout()" class="margin">
             <mat-icon>exit_to_app</mat-icon>
           </button>
+          <a mat-mini-fab color="accent" routerLink="panel" class="margin">
+            <i class="fas fa-user-shield"></i>
+          </a>
         </div>
         <ng-template #showLogin>
           <button mat-icon-button (click)="login()" class="margin" color="warn">
             <i class="fab fa-google"></i>
           </button>
-          <button mat-icon-button (click)="loginFacebook()" class="margin fb">
+          <!-- <button mat-icon-button (click)="loginFacebook()" class="margin fb">
             <i class="fab fa-facebook-f"></i>
-          </button>
+          </button> -->
         </ng-template>
       </ul>
     </div>
