--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,14 +1,10 @@
 <div class="container p-5">
   <h1>Lists</h1>
+
+  <b>{{items}}</b>
   <mat-form-field appearance="standard">
     <mat-label>Filter</mat-label>
-    <input
-      matInput
-      (keyup)="applyFilter($event)"
-      placeholder="Ex. Mobile"
-      autocomplete="off"
-      #input
-    />
+    <input matInput (keyup)="applyFilter($event)" placeholder="Ex. Mobile" autocomplete="off" #input />
   </mat-form-field>
 
   <div class="mat-elevation-z8">
@@ -33,12 +29,7 @@
           <!-- <button mat-icon-button (click)="openList(row.id)">
             <mat-icon>movie</mat-icon>
           </button> -->
-          <button
-            mat-icon-button
-            [matBadge]="row.movies.length"
-            matBadgePosition="after"
-            (click)="openList(row.id)"
-          >
+          <button mat-icon-button [matBadge]="row.movies.length" matBadgePosition="after" (click)="openList(row.id)">
             <mat-icon>movie</mat-icon>
           </button>
         </td>
@@ -50,21 +41,14 @@
           Status
         </th>
         <td mat-cell *matCellDef="let row" class="status">
-          <span class="badge bg-light text-dark" *ngIf="row.status"
-            >Activo</span
-          >
+          <span class="badge bg-light text-dark" *ngIf="row.status">Activo</span>
           <span class="badge bg-secondary" *ngIf="!row.status">Inactivo</span>
         </td>
       </ng-container>
 
       <!-- Created date Column -->
       <ng-container matColumnDef="createdDate">
-        <th
-          mat-header-cell
-          *matHeaderCellDef
-          mat-sort-header
-          class="createdDate"
-        >
+        <th mat-header-cell *matHeaderCellDef mat-sort-header class="createdDate">
           Created date
         </th>
         <td mat-cell *matCellDef="let row" class="createdDate">
@@ -77,7 +61,7 @@
         <th mat-header-cell *matHeaderCellDef mat-sort-header>Delete</th>
         <td mat-cell *matCellDef="let row" class="createdDate">
           <div class="example-button-container">
-            <button mat-mini-fab color="warn" (click)="deleteOrder(row.id)">
+            <button mat-mini-fab color="warn" (click)="deleteOrder(row.id)" [disabled]="!row.status">
               <mat-icon>delete</mat-icon>
             </button>
           </div>
